# agent2

./: .cursorrules  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  agent2.yaml  docker-compose.yml  llms-full.txt  llms.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.playwright-mcp/: page-2026-04-01T23-40-43-660Z.yml  page-2026-04-01T23-40-56-061Z.yml  page-2026-04-01T23-41-09-095Z.yml  page-2026-04-01T23-41-21-575Z.yml  page-2026-04-01T23-41-38-740Z.yml  page-2026-04-01T23-41-55-856Z.yml
agent2_cli/: __init__.py  demo_mode.py  doctor.py  generator.py  main.py  onboarding.py  setup.py  setup_tui.py  spec.py  tui.py
agents/_template/: Dockerfile  agent.py  config.yaml  main.py  schemas.py  tools.py
agents/approval-demo/: Dockerfile  __init__.py  (+4 more)
docker/: postgres-init.sql
docs/: approvals.md  architecture.md  brain-clone-pattern.md  capabilities.md  cli-onboarding.md  comparison.md  creating-agents.md  demo-script.md  deployment.md  getting-started.md  knowledge-management.md  market-sentiment-agents.md  observability.md  provider-policy.md  resume-conversations.md
knowledge/: collections.yaml
scripts/: install.ps1  install.sh  sync-skills.sh
shared/: __init__.py  __main__.py  action_executor.py  api.py  approval_workflow.py  auth.py  config.py  errors.py  ingest.py  learnings.py  message_history.py  runtime.py  tool_policies.py  worker.py
tests/: conftest.py  test_demo_flow.py
(+120 files in other folders)
